// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente <GifGrid /> Debe de hacer match en el componente <GifGrid /> 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeInDown"
  >
     
    One punch
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Cargando...
  </p>
  <div
    className="cardGrid"
  />
</Fragment>
`;

exports[`Pruebas en el componente <GifGrid /> Debe de mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeInDown"
  >
     
    One punch
     
  </h3>
  <div
    className="cardGrid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Algo"
      url="https://localhost/algo.jpg"
    />
    <GifGridItem
      id="ABCD"
      key="ABCD"
      title="Algo"
      url="https://localhost/algo.jpg"
    />
    <GifGridItem
      id="ABCE"
      key="ABCE"
      title="Algo"
      url="https://localhost/algo.jpg"
    />
  </div>
</Fragment>
`;
